addons/rose/addon/styles/rose/components/dropdown/_item.scss
@use '../../variables/sizing';
@use '../../utilities/type';
@use 'sass:math';

$checkmark: url("data:image/svg+xml;utf-8,<svg viewBox='0 0 24 24' fill='%231563ff' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z'></path></svg>");

.rose-dropdown-item {
  @include type.type(s);
  min-width: (sizing.rems(m)) * 20;
  $paddingY: math.div(
    sizing.rems(xl) - (sizing.rems(m) + sizing.rems(xxxs)),
    2
  );
  $paddingX: sizing.rems(s);
  padding: $paddingY $paddingX;
  //$line-height: math.div(36, 14);
  //line-height: $line-height;

  --color: var(--stark);
  --background-color: transparent;

  color: var(--color);
  background-color: var(--background-color);

  .rose-form-radio {
    color: currentColor;
    margin-bottom: 0;

    .rose-form-radio-label {
      display: block;
      margin: -#{$paddingY} -#{$paddingX};
      padding-top: sizing.rems(xs) + sizing.rems(xxxxs);
      padding-bottom: sizing.rems(xs) + sizing.rems(xxxxs);
      padding-left: sizing.rems(s);
      padding-right: sizing.rems(xl);
      font-weight: normal;

      &:hover {
        background-color: var(--ui-gray-subtler-5);
      }

      &::after {
        top: sizing.rems(xxs) + sizing.rems(xxxs);
        right: sizing.rems(xs);
        left: auto;
        transform: scale(1.5);
      }
    }

    .rose-form-radio-field {
      &:not(:checked) {
        ~ .rose-form-radio-label {
          &::after {
            opacity: 0.25;
          }
        }
      }
      &:checked {
        ~ .rose-form-radio-label {
          color: var(--action);
          background-color: var(--action-subtler-1h);
        }
      }

      &:disabled {
        ~ .rose-form-radio-label {
          opacity: 0.5;
        }
      }
    }
  }

  .rose-form-checkbox {
    color: currentColor;
    margin-bottom: 0;
    .rose-form-checkbox-label {
      display: block;
      margin: -#{$paddingY} -#{$paddingX};
      padding-top: sizing.rems(xs) + sizing.rems(xxxxs);
      padding-bottom: sizing.rems(xs) + sizing.rems(xxxxs);
      padding-left: sizing.rems(s);
      padding-right: sizing.rems(xl) + sizing.rems(l);
      font-weight: normal;

      &:hover {
        background-color: var(--ui-gray-subtler-5);
      }

      &::after {
        top: sizing.rems(xxs) + sizing.rems(xxxs);
        right: sizing.rems(xs);
        left: auto;
        border: sizing.rems(xxxs) solid var(--ui-gray-subtler-2);
        border-radius: sizing.rems(xxxs);
        transform: scale(0.66);
      }

      &::before {
        position: absolute;
        top: sizing.rems(xs);
        left: 0;
        display: block;
        width: sizing.rems(m);
        height: sizing.rems(m);
        pointer-events: none;
        content: ' ';
        border: none;
      }
    }

    .rose-form-checkbox-field {
      &:hover {
        ~ .rose-form-checkbox-label {
          &::after {
            border-color: var(--ui-gray);
          }
        }
      }

      &:checked {
        ~ .rose-form-checkbox-label {
          color: var(--action);
          background-color: var(--action-subtler-1h);
          &::after {
            border-color: var(--action);
            background-size: sizing.rems(m);
          }
        }
      }

      &:disabled {
        ~ .rose-form-checkbox-label {
          opacity: 0.5;
          &::after {
            border-color: var(--ui-gray-subtler-2);
            background-color: var(--ui-gray-subtler-4);
          }
          &::before {
            background: none;
          }
        }
      }
    }
  }
}

